Invertieren der Gewichtsmatrizen beim Deep-Learning

--- a/doc/algebra.tex
+++ b/doc/algebra.tex
@@ -448,9 +448,13 @@ Die Wahl des geeigneten Algorithmus zur Matrixmultiplikation hängt stark von de
 \end{enumerate}
 
 \subsection{Deep-Learning}
-Die Idee des Deep-Learning ist, dass das Wissen eines neuronalen Netzes durch Gewichtsmatrizen $W_i$ beschrieben wird. Das neuronale Netz hat $s$ Ebenen und jeder Ebene wird eine Gewichtsmatrix $W_i$ für ein bestimmtes zu lernendes Merkmal zugeordnet. Die Eingabe für das Netzwerk ist ein Vektor $\boldsymbol{v}$, der in seiner charakteristischen Art vom Netzwerk gelernt werden soll und durch $s$ Merkmale beschrieben ist. Macht das Netzwerk auf einer Ebene beim Lernen des Merkmals einen Fehler, wird dieser durch Subtraktion korrigiert und die korrigierte Gewichtsmatrix $W^{'}_i$ für die nächste Berechnung in der Ebene $i$ verwendet. Für Ebene $i$ wurde $W^{'}_i$ also in Abhängigkeit des abweichenden Fehlers gelernt. Je kleiner die Fehler werden, desto besser sind die gelernten Gewichtsmatrizen $W^{'}_i$ in der Zuordnung des Merkmals von $\boldsymbol{v}$. Ein neuronales Netz, das ein beliebiges $\boldsymbol{v}$ in seiner charakteristischen Art immer richtig zuordnet, hat auf allen Ebenen Gewichtsmatrizen $W^{'}_i$ gelernt, die in der Zuordnung keinen Fehler mehr machen.
+Die Idee des Deep-Learning ist, dass das Wissen eines neuronalen Netzes durch Gewichtsmatrizen $W_i$ beschrieben wird. Das neuronale Netz hat $s$ Ebenen und jeder Ebene wird eine Gewichtsmatrix $W_i$ für ein bestimmtes zu lernendes Merkmal zugeordnet. Die Eingabe für das Netzwerk ist ein Vektor $\boldsymbol{v}$, der in seiner \textit{charakteristischen Art} vom Netzwerk gelernt werden soll und durch $s$ \textit{Merkmale} beschrieben ist. Macht das Netzwerk auf einer Ebene beim Lernen des Merkmals einen Fehler, wird dieser durch Subtraktion korrigiert und die korrigierte Gewichtsmatrix $W^{'}_i$ für die nächste Berechnung in der Ebene $i$ verwendet. Für Ebene $i$ wurde $W^{'}_i$ also in Abhängigkeit des abweichenden Fehlers gelernt. Je kleiner die Fehler werden, desto besser sind die gelernten Gewichtsmatrizen $W^{'}_i$ in der Zuordnung des Merkmals von $\boldsymbol{v}$. Ein neuronales Netz, das ein beliebiges $\boldsymbol{v}$ in seiner charakteristischen Art immer richtig zuordnet, hat auf allen Ebenen Gewichtsmatrizen $W^{'}_i$ gelernt, die in der Zuordnung keinen Fehler mehr machen.
 
-Im Allgemeinen wird das Lernen in neuronalen Netzen für eine beliebige Ebene $i$ mit der Matrixmultiplikation gelöst. Betrachtet man die Multiplikation von $W_i$ und $\boldsymbol{v}$, wobei $W_i$ eine $n \times n$ Matrix und $\boldsymbol{v}$ ein $n \times 1$ Vektor ist, dann ist das Ergebnis dieser Multiplikation wieder ein Vektor der Größe $n \times 1$. Um $n$ Vektoren gleichzeitig zu lernen, wurden $n$ Vektoren als $n \times n$ Matrix aufgefasst und dazu die Matrixmultiplikation verwendet. Eine Alternative dazu ist, die Gewichtsmatrix $W_i$ der Größe $n \times n$ als $n$ Vektoren der Größe $1 \times n$ aufzufassen und $n$ Vektormultiplikationen zu verwenden. Sollen dann $k$ Vektoren gleichzeitig gelernt werden, hat das Lernen bezogen auf die Multiplikation eine Laufzeit von $k \cdot O(n^2)$. Dabei muss $k$ nicht den Wert $n$ annehmen, da $n$ sehr groß werden kann. Also ist $k \cdot O(n^2)$ immer noch schneller als $O(n^{2.3219})$, wenn \textsc{Strassen-25} für die Matrixmultiplikation verwendet wird. 
+Im Allgemeinen wird das Lernen in neuronalen Netzen für eine beliebige Ebene $i$ mit der Matrixmultiplikation gelöst. Betrachtet man die Multiplikation von $W_i$ und $\boldsymbol{v}$, wobei $W_i$ eine $n \times n$ Matrix und $\boldsymbol{v}$ ein $n \times 1$ Vektor ist, dann ist das Ergebnis dieser Multiplikation wieder ein Vektor der Größe $n \times 1$. Um $n$ Vektoren gleichzeitig zu lernen, wurden $n$ Vektoren als $n \times n$ Matrix aufgefasst und dazu die Matrixmultiplikation verwendet. Eine Alternative dazu ist, die Gewichtsmatrix $W_i$ der Größe $n \times n$ als $n$ Vektoren der Größe $1 \times n$ aufzufassen und $n$ Vektormultiplikationen zu verwenden. Sollen dann $k$ Vektoren gleichzeitig gelernt werden, hat das Lernen bezogen auf die Multiplikation eine Laufzeit von $k \cdot O(n^2)$. Dabei muss $k$ nicht den Wert $n$ annehmen, da $n$ sehr groß werden kann. Also ist $k \cdot O(n^2)$ immer noch schneller als $O(n^{2.3219})$, wenn \textsc{Strassen-25} für die Matrixmultiplikation verwendet wird.
+
+Die Gewichtsmatrix $W_i$ einer Ebene $i$ eines neuronalen Netzwerks beschreibt wie stark die Neuronen in dieser Ebene für die Erkennung des Merkmals ausgeprägt sind. Die Neuronen $W_i$ werden dann stärker, wenn sie in der Erkennung eines Merkmals einen Fehler gemacht haben und entsprechend korrigiert werden. Eine andere Möglichkeit, ein beliebiges $\boldsymbol{v}$ in seiner charakteristischen Art noch besser zuordnen zu können, besteht darin, die Gewichtsmatrizen $W_i$ auf allen Ebenen zu invertieren. Kann das neuronale Netz $\boldsymbol{v}$ in seiner charakteristischen Art zuordnen, wird auch geprüft, ob das neuronale Netz mit $W^{-1}_i$ die Eingabe $\boldsymbol{v}$ in seiner charakteristischen Art verwirft, $1 \leq i \leq s$. Dadurch ist die Aussage des neuronalen Netzes in der Zuordnung einer beliebigen Eingabe $\boldsymbol{v}$ sicherer.
+
+Zum Beispiel wird dazu ein einfaches neuronales Netz betrachtet, welches zuordnet, ob eine vorgegebene Zeichnung ein Haus darstellt oder nicht. Wenn das neuronale Netz zuordnet, die Zeichnung ist ein Haus, dann wird das neuronale Netz auf allen Ebenen mit den Gewichtsmatrizen $W^{-1}_i$ ausgeführt. Verwirft das neuronale Netz dann die Zeichnung, ist die Zeichnung mit höherer Wahrscheinlichkeit ein Haus.
 
 \section{Finden von Kernen}
 In der Beweisführung, dass es keinen Teile-und-Herrsche Algorithmus zur Multiplikation von $n \times n$ Matrizen gibt, der weniger als 5 Matrixmultiplikationen benötigt, wurde die Eigenschaft des Projizierens genutzt. Zwei Vektoren $\boldsymbol{u}$ und $\boldsymbol{v}$ projizieren $\boldsymbol{w}$ genau dann, wenn es Konstanten $k_1$ und $k_2$ gibt, so dass $$k_1 \boldsymbol{u} + k_2\boldsymbol{v} = \boldsymbol{w} \neq \boldsymbol{0}.$$ Es ist im Allgemeinen von Interesse, eine minimale Projektion zu finden: Finde eine minimale Projektion, nimm noch eine Konstante $k$ weg, dann ist es die \textit{größte Einheit}, die aus sich heraus, egal wie, nichts mehr projizieren kann außer $\boldsymbol{0}$. Die Idee des Algorithmus von \textsc{Strassen-25} eignet sich zum Finden von Kernen.
